tests/specs/node/dynamic_import_cjs_to_dual/check.out
Check file:///[WILDLINE]/index.cts
error: TS2322 [ERROR]: Type '"mjs"' is not assignable to type '"value"'.
  const value: "value" = mod.kind;
        ~~~~~
    at file:///[WILDLINE]/index.cts:3:9

